--- a/styles.sass
+++ b/styles.sass
@@ -103,6 +103,7 @@
                 border: none;
                 background-color: transparent;
                 color: #2e2e2e;
+                outline: none;
                 
     
         .chat__cont-btn-send
