--- a/styles.sass
+++ b/styles.sass
@@ -19,7 +19,7 @@
             color: #a3f7bf8a;
 
     &__view
-        height: 400px;
+        height: 300px;
         overflow-y: scroll;
         width: 100%;
         background-color: none;
@@ -31,26 +31,19 @@
         //* Barra de scroll *//
         &::-webkit-scrollbar
             width: 8px;
-            background-color: #b35c5c;
-            border-radius: 8px;
+            background-color: #f4f6ff;
 
 
         //* Thumb del scroll (cuadrito) *//
         &::-webkit-scrollbar-thumb
-            background-color: #000086;
-            border-radius: 4px;
-
-
-        &::-webkit-scrollbar-thumb:hover
-            background-color: #181870;
-            box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
-
+            background-color: #f3c623;
+            border-radius: 2px;
 
         //* Track creo que es la barra por donde viaja el thumb
         pero no entiendo la diferencia con el solo scroll bar*//
 
         &::-webkit-scrollbar-track:active
-            background-color: rgba(0, 128, 0, 0.5);
+            background-color: #dddee2;
 
     &__sheet
         width: 100%;
@@ -104,6 +97,7 @@
                 background-color: transparent;
                 color: #2e2e2e;
                 outline: none;
+                
                 
     
         .chat__cont-btn-send
